--- a/index.html
+++ b/index.html
@@ -52,19 +52,12 @@
 		}
 	</style>
 	<body <!--oncontextmenu="return false"-->>
-		<h3>Hacked By</h3>
+		<iframe width="0px" height="0" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/691735033&color=%23ff5500&auto_play=true&hide_related=false&show_comments=false&show_user=false&show_reposts=false&show_teaser=false&visual=false"></iframe>
+		<h3>Welcome To</h3>
 		<!--<marquee style="color: red;" direction="left"><h2>BDhaCkers009</h2></marquee>-->
 		<h2>BDhaCkers009</h2>
-		<p style="color: azure;">Follow My GITHUB account:-<a style="color: #006994;" href="https://github.com/BDhaCkers009">CLICK</a></p>
+		<p style="color: azure;">Follow me on Github :-<a style="color: #006994;" target="_blank" href="https://github.com/BDhaCkers009">CLICK</a></p>
 	</body>
 </html>
-<br><div style="display:none">
-<audio id="myAudio" controls autoplay><source src="https://k.top4top.io/m_24592mtuo0.mp3" type="audio/mpeg">
-</audio>
-</div>
-<script>
-function myFunction() {
-  var x = document.getElementById("myAudio").autoplay;
-}
-</script>
+
 
