--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		<h3>Welcome To</h3>
 		<!--<marquee style="color: red;" direction="left"><h2>BDhaCkers009</h2></marquee>-->
 		<h2>BDhaCkers009</h2>
-		<font face= cursive><p style="color: azure;">Follow me on Github :-<a style="color: #006994;" target="_blank" href="https://github.com/BDhaCkers009">CLICK</a></p></font>
+		<p style="color: azure;">Follow me on Github :-<a style="color: #006994;" target="_blank" href="https://github.com/BDhaCkers009">CLICK</a></p>
 	</body>
 </html>
 
