--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 	
 	<style>
 		body{
-			<!--user-select: none;-->
-			<!--cursor: none;-->
-			background:url('./matrix-animated-image.gif') repeat-y 100% 100% fixed;
-    			height:100%;
-    			width:100%;
 			
+			background-image:url('./matrix-animated-image.gif');
+			background-size:100%;
+			background-repeat: repeat-y;
+			background-attachment: fixed;
+			height:100%;
+			width:100%;
 			display: flex;
 			justify-content: center;
 			align-items: center;
