--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<style>
 		body{
 			
-			background-image:url('./matrix-animated-image.gif');
+			background-image:url('https://raw.githubusercontent.com/takeover69/bdhackers009.live/main/matrix-animated-image.gif');
 			background-size:100%;
 			background-repeat: repeat-y;
 			background-attachment: fixed;
